--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mnist"
-version = "0.2.1"
+version = "0.5.5"
 description = "MNIST"
 authors = [
     {name = "dMario24", email = "data.mario24@gmail.com"},
@@ -26,3 +26,6 @@ distribution = true
 
 [tool.pytest.ini_options]
 pythonpath = "src"
+
+[project.scripts]
+ml-worker = 'mnist.worker:run'
