--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mnist"
-version = "0.3.3"
+version = "0.3.4"
 description = "MNIST"
 authors = [
     {name = "dMario24", email = "data.mario24@gmail.com"},
@@ -11,6 +11,7 @@ dependencies = [
     "PyMySQL>=1.1.1",
     "jigeum>=1.0.0",
     "uvicorn[standard]>=0.30.6",
+    "requests>=2.32.3",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
