--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mnist"
-version = "0.3.6"
+version = "0.4.0"
 description = "MNIST"
 authors = [
     {name = "dMario24", email = "data.mario24@gmail.com"},
@@ -12,7 +12,19 @@ dependencies = [
     "jigeum>=1.0.0",
     "uvicorn[standard]>=0.30.6",
     "requests>=2.32.3",
+    "pytz>=2024.2",
+    "pillow>=10.4.0",
+    "python-multipart>=0.0.9",
+    "tensorflow>=2.17.0",
+    "keras>=3.5.0",
+    "matplotlib>=3.9.2",
+    "scikit-learn>=1.5.2",
+    "scikit-image>=0.24.0",
+    "opencv-python>=4.10.0.84",
+    "pydot>=3.0.1",
 ]
+
+
 requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "GNU"}
@@ -29,6 +41,10 @@ distribution = true
 test = [
     "pytest>=8.3.3",
 ]
+note = [
+    "notebook>=7.2.2",
+]
+
 [tool.pytest.ini_options]
 pythonpath = "src"
 
