--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mnist"
-version = "0.4.0"
+version = "0.4.5"
 description = "MNIST"
 authors = [
     {name = "dMario24", email = "data.mario24@gmail.com"},
@@ -22,6 +22,7 @@ dependencies = [
     "scikit-image>=0.24.0",
     "opencv-python>=4.10.0.84",
     "pydot>=3.0.1",
+    "typer>=0.12.5",
 ]
 
 
@@ -50,3 +51,5 @@ pythonpath = "src"
 
 [project.scripts]
 ml-worker = 'mnist.worker:run'
+ml-noti = 'mnist.cli:run_noti'
+ml-path = 'mnist.model:get_model_path'
